package org.interscity.htc
package examples

import core.actor.manager.{ GlobalTimeManager, TimeManagerRouter }
import core.actor.manager.time.{ DiscreteEventSimulationTimeManager, TimeSteppedSimulationTimeManager, OptimisticSimulationTimeManager }
import core.enumeration.TimePolicyEnum
import core.types.Tick
import model.mobility.actor.{ TimeSteppedCar, TimeSteppedLink }

import org.apache.pekko.actor.{ ActorRef, ActorSystem, Props }
import org.interscity.htc.core.entity.actor.properties.Properties
import org.htc.protobuf.core.entity.event.control.execution.{ RegisterActorEvent, StartSimulationTimeEvent }

/**
 * Exemplo de uso da arquitetura multi-paradigma do Hyperbolic Time Chamber
 * 
 * Este exemplo demonstra como:
 * 1. Configurar o GlobalTimeManager e LocalTimeManagers
 * 2. Registrar atores com diferentes pol√≠ticas de tempo
 * 3. Executar uma simula√ß√£o multi-paradigma
 */
object MultiParadigmSimulationExample {

  /**
   * Configura√ß√£o completa da arquitetura multi-paradigma
   */
  def setupMultiParadigmArchitecture(
    system: ActorSystem,
    simulationDuration: Tick = 1000
  ): ActorRef = {
    
    println("=== Configurando Arquitetura Multi-Paradigma ===")
    
    // Criar o SimulationManager (mock para este exemplo)
    val simulationManager = system.actorOf(
      Props.empty,
      name = "ExampleSimulationManager"
    )
    
    // Criar o TimeManagerRouter que gerencia toda a arquitetura
    val timeManagerRouter: ActorRef = system.actorOf(
      TimeManagerRouter.props(simulationDuration, simulationManager),
      name = "TimeManagerRouter"
    )
    
    println(s"TimeManagerRouter criado: ${timeManagerRouter.path}")
    
    timeManagerRouter
  }

  /**
   * Exemplo de registro de atores DES
   */
  def registerDESActors(timeManagerRouter: ActorRef): Unit = {
    println("\n=== Registrando Atores DES ===")
    
    // Exemplo: sensores IoT operam em modo DES
    val sensorProperties = Properties(
      entityId = "sensor-001",
      timePolicy = Some(TimePolicyEnum.DiscreteEventSimulation)
    )
    
    // Registrar ator DES
    timeManagerRouter ! RegisterActorEvent(
      startTick = 0,
      actorId = "sensor-001",
      identify = Some(
        org.htc.protobuf.core.entity.actor.Identify(
          id = "sensor-001",
          resourceId = "iot-resource",
          classType = "org.example.SensorActor",
          actorRef = "/user/sensor-001"
        )
      )
    )
    
    println("Sensor IoT registrado no DES_LTM")
  }

  /**
   * Exemplo de registro de atores TimeStepped (mobilidade)
   */
  def registerTimeSteppedActors(timeManagerRouter: ActorRef): Unit = {
    println("\n=== Registrando Atores TimeStepped (Mobilidade) ===")
    
    // Registrar Links (estradas)
    for (i <- 1 to 3) {
      val linkProperties = Properties(
        entityId = s"link-$i",
        timePolicy = Some(TimePolicyEnum.TimeSteppedSimulation)
      )
      
      timeManagerRouter ! RegisterActorEvent(
        startTick = 0,
        actorId = s"link-$i",
        identify = Some(
          org.htc.protobuf.core.entity.actor.Identify(
            id = s"link-$i",
            resourceId = "mobility-resource",
            classType = "org.interscity.htc.model.mobility.actor.TimeSteppedLink",
            actorRef = s"/user/link-$i"
          )
        )
      )
    }
    
    // Registrar Carros
    for (i <- 1 to 5) {
      val carProperties = Properties(
        entityId = s"car-$i",
        timePolicy = Some(TimePolicyEnum.TimeSteppedSimulation)
      )
      
      timeManagerRouter ! RegisterActorEvent(
        startTick = 0,
        actorId = s"car-$i",
        identify = Some(
          org.htc.protobuf.core.entity.actor.Identify(
            id = s"car-$i",
            resourceId = "mobility-resource",
            classType = "org.interscity.htc.model.mobility.actor.TimeSteppedCar",
            actorRef = s"/user/car-$i"
          )
        )
      )
    }
    
    println("3 Links e 5 Carros registrados no TimeStepped_LTM")
  }

  /**
   * Exemplo de registro de atores TimeWindow (futuro)
   */
  def registerTimeWindowActors(timeManagerRouter: ActorRef): Unit = {
    println("\n=== Registrando Atores TimeWindow (Implementa√ß√£o Futura) ===")
    
    // Exemplo: simula√ß√£o financeira com rollback otim√≠stico
    val tradingProperties = Properties(
      entityId = "trading-agent-001",
      timePolicy = Some(TimePolicyEnum.OptimisticSimulation)
    )
    
    timeManagerRouter ! RegisterActorEvent(
      startTick = 0,
      actorId = "trading-agent-001",
      identify = Some(
        org.htc.protobuf.core.entity.actor.Identify(
          id = "trading-agent-001",
          resourceId = "financial-resource",
          classType = "org.example.TradingAgent",
          actorRef = "/user/trading-agent-001"
        )
      )
    )
    
    println("Trading Agent registrado no TimeWindow_LTM (esqueleto)")
  }

  /**
   * Iniciar simula√ß√£o multi-paradigma
   */
  def startMultiParadigmSimulation(timeManagerRouter: ActorRef): Unit = {
    println("\n=== Iniciando Simula√ß√£o Multi-Paradigma ===")
    
    val startEvent = StartSimulationTimeEvent(
      startTick = 0,
      data = Some(
        org.htc.protobuf.core.entity.event.control.execution.data.StartSimulationTimeData(
          startTime = System.currentTimeMillis()
        )
      )
    )
    
    timeManagerRouter ! startEvent
    
    println("Simula√ß√£o iniciada! Os paradigmas DES, TimeStepped e TimeWindow est√£o coordenados pelo GlobalTimeManager")
    println("\nProtocolo de Sincroniza√ß√£o de 4 Fases:")
    println("1. Request Time: GTM solicita tempo atual de todos os LTMs")
    println("2. Propose Time: GTM calcula LBTS e prop√µe novo tempo")
    println("3. Grant Time: GTM concede permiss√£o para avan√ßo de tempo")
    println("4. Acknowledge: LTMs confirmam processamento completo")
  }

  /**
   * Demonstrar diferen√ßas entre paradigmas
   */
  def demonstrateParadigmDifferences(): Unit = {
    println("\n=== Diferen√ßas entre Paradigmas ===")
    
    println("\n1. DES (Discrete Event Simulation):")
    println("   - Eventos processados em ordem cronol√≥gica")
    println("   - Ideal para: sensores IoT, sistemas de eventos espont√¢neos")
    println("   - Avan√ßo de tempo: baseado em eventos agendados")
    
    println("\n2. TimeStepped:")
    println("   - Passos de tempo fixos e sincronizados")
    println("   - Ideal para: modelos de mobilidade, sistemas f√≠sicos")
    println("   - Avan√ßo de tempo: passos regulares com barreira de sincroniza√ß√£o")
    
    println("\n3. TimeWindow (implementa√ß√£o futura):")
    println("   - Simula√ß√£o otim√≠stica com janelas de tempo")
    println("   - Ideal para: simula√ß√µes financeiras, sistemas com rollback")
    println("   - Avan√ßo de tempo: janelas otim√≠sticas com possibilidade de rollback")
  }

  /**
   * Exemplo completo
   */
  def runExample(): Unit = {
    println("üöÄ Exemplo: Arquitetura Multi-Paradigma do Hyperbolic Time Chamber\n")
    
    // Criar sistema Pekko
    implicit val system: ActorSystem = ActorSystem("MultiParadigmExample")
    
    try {
      // 1. Configurar arquitetura
      val timeManagerRouter = setupMultiParadigmArchitecture(system)
      
      // Aguardar inicializa√ß√£o
      Thread.sleep(1000)
      
      // 2. Registrar atores de diferentes paradigmas
      registerDESActors(timeManagerRouter)
      registerTimeSteppedActors(timeManagerRouter)
      registerTimeWindowActors(timeManagerRouter)
      
      // 3. Demonstrar diferen√ßas
      demonstrateParadigmDifferences()
      
      // 4. Iniciar simula√ß√£o
      startMultiParadigmSimulation(timeManagerRouter)
      
      // 5. Aguardar um pouco para ver a coordena√ß√£o
      println("\n‚è≥ Aguardando execu√ß√£o da simula√ß√£o por 10 segundos...")
      Thread.sleep(10000)
      
      println("\n‚úÖ Exemplo conclu√≠do!")
      
    } finally {
      system.terminate()
    }
  }

  def main(args: Array[String]): Unit = {
    runExample()
  }
}

/**
 * Exemplo espec√≠fico para configura√ß√£o de mobilidade TimeStepped
 */
object MobilityTimeSteppedExample {
  
  /**
   * Configurar cen√°rio de mobilidade urbana com TimeStepped
   */
  def setupUrbanMobilityScenario(system: ActorSystem): Unit = {
    println("üöó Configurando Cen√°rio de Mobilidade Urbana TimeStepped")
    
    // Criar TimeManagerRouter
    val simulationManager = system.actorOf(Props.empty, "MobilitySimManager")
    val timeRouter = system.actorOf(
      TimeManagerRouter.props(simulationDuration = 1000, simulationManager),
      "MobilityTimeRouter"
    )
    
    // Configurar links da cidade
    val cityLinks = List(
      ("main-street-1", 1000.0, 80.0, 2, 100), // comprimento, velocidade livre, lanes, capacidade
      ("main-street-2", 800.0, 60.0, 3, 150),
      ("avenue-1", 1200.0, 100.0, 4, 200),
      ("local-road-1", 500.0, 40.0, 1, 50)
    )
    
    cityLinks.foreach { case (linkId, length, freeSpeed, lanes, capacity) =>
      timeRouter ! RegisterActorEvent(
        startTick = 0,
        actorId = linkId,
        identify = Some(
          org.htc.protobuf.core.entity.actor.Identify(
            id = linkId,
            resourceId = "mobility-links",
            classType = "org.interscity.htc.model.mobility.actor.TimeSteppedLink",
            actorRef = s"/user/$linkId"
          )
        )
      )
      println(s"  Link registrado: $linkId (${length}m, ${freeSpeed}km/h, $lanes lanes)")
    }
    
    // Configurar frota de ve√≠culos
    val vehicles = (1 to 20).map { i =>
      s"vehicle-$i"
    }
    
    vehicles.zipWithIndex.foreach { case (vehicleId, i) =>
      timeRouter ! RegisterActorEvent(
        startTick = i * 10, // Entrada escalonada
        actorId = vehicleId,
        identify = Some(
          org.htc.protobuf.core.entity.actor.Identify(
            id = vehicleId,
            resourceId = "mobility-vehicles",
            classType = "org.interscity.htc.model.mobility.actor.TimeSteppedCar",
            actorRef = s"/user/$vehicleId"
          )
        )
      )
    }
    
    println(s"  ${vehicles.size} ve√≠culos registrados com entrada escalonada")
    
    // Iniciar simula√ß√£o
    timeRouter ! StartSimulationTimeEvent(
      startTick = 0,
      data = Some(
        org.htc.protobuf.core.entity.event.control.execution.data.StartSimulationTimeData(
          startTime = System.currentTimeMillis()
        )
      )
    )
    
    println("üéØ Simula√ß√£o de mobilidade TimeStepped iniciada!")
    println("   - Todos os ve√≠culos avan√ßam sincronizadamente")
    println("   - Links calculam densidade e velocidade em cada tick")
    println("   - Barreira de sincroniza√ß√£o garante coordena√ß√£o temporal")
  }
}

/**
 * Compara√ß√£o entre paradigmas DES vs TimeStepped para mobilidade
 */
object ParadigmComparisonExample {
  
  def compareParadigms(): Unit = {
    println("üìä Compara√ß√£o: DES vs TimeStepped para Simula√ß√£o de Mobilidade\n")
    
    println("üî∏ DES (Implementa√ß√£o Original):")
    println("   ‚úÖ Vantagens:")
    println("      - Precis√£o temporal exata")
    println("      - Eficiente para eventos esparsos")
    println("      - Menor overhead computacional")
    println("   ‚ùå Desvantagens:")
    println("      - Dif√≠cil sincroniza√ß√£o entre ve√≠culos")
    println("      - Complexo para modelos de tr√°fego denso")
    println("      - Ordem de eventos pode afetar resultados")
    
    println("\nüî∏ TimeStepped (Nova Implementa√ß√£o):")
    println("   ‚úÖ Vantagens:")
    println("      - Sincroniza√ß√£o perfeita entre ve√≠culos")
    println("      - Ideal para modelos de tr√°fego")
    println("      - Facilita an√°lise de densidade temporal")
    println("      - Comportamento determin√≠stico")
    println("   ‚ùå Desvantagens:")
    println("      - Overhead de sincroniza√ß√£o")
    println("      - Pode ser menos eficiente para eventos esparsos")
    println("      - Granularidade temporal fixa")
    
    println("\nüéØ Recomenda√ß√µes de Uso:")
    println("   üì± DES: IoT, sensores, eventos espont√¢neos")
    println("   üöó TimeStepped: mobilidade, tr√°fego, sistemas f√≠sicos")
    println("   üí∞ TimeWindow: simula√ß√µes financeiras, sistemas com rollback")
  }
}

/**
 * Guia de migra√ß√£o da implementa√ß√£o original para multi-paradigma
 */
object MigrationGuide {
  
  def showMigrationSteps(): Unit = {
    println("üîÑ Guia de Migra√ß√£o: Implementa√ß√£o Original ‚Üí Multi-Paradigma\n")
    
    println("üìù Passo 1: Atualizar TimeManager")
    println("   Antes: TimeManager √∫nico para toda simula√ß√£o")
    println("   Depois: TimeManagerRouter ‚Üí GlobalTimeManager ‚Üí LocalTimeManagers")
    println("   C√≥digo: Substituir TimeManager por TimeManagerRouter\n")
    
    println("üìù Passo 2: Adicionar Pol√≠tica de Tempo nos Atores")
    println("   Antes: Todos os atores usavam DES implicitamente")
    println("   Depois: Especificar timePolicy nas Properties")
    println("   C√≥digo: Properties(..., timePolicy = Some(TimePolicyEnum.TimeSteppedSimulation))\n")
    
    println("üìù Passo 3: Migrar Atores de Mobilidade")
    println("   Antes: Car extends Movable ‚Üí DES com SpontaneousEvent")
    println("   Depois: TimeSteppedCar extends TimeSteppedMovable ‚Üí TimeStepped com AdvanceToTick")
    println("   C√≥digo: Substituir Car por TimeSteppedCar\n")
    
    println("üìù Passo 4: Atualizar Cria√ß√£o de Atores")
    println("   Antes: CreatorManager ‚Üí TimeManager direto")
    println("   Depois: CreatorManager ‚Üí TimeManagerRouter ‚Üí LTM apropriado")
    println("   C√≥digo: Routing autom√°tico baseado em heur√≠sticas\n")
    
    println("‚úÖ Compatibilidade: Implementa√ß√£o original continua funcionando!")
    println("   - DES_LTM mant√©m comportamento original")
    println("   - Atores existentes s√£o automaticamente roteados para DES_LTM")
    println("   - Migra√ß√£o pode ser gradual, paradigma por paradigma")
  }
}
